tests/should_fail/type_list_wordform_wrong_elem.nv
module main

// SHOULD FAIL: List(T) word form with wrong element type
let xs: List(Int) = ["hello", "world"]
